# win-gpg-agent

./: .gitignore  .ignore  CMakeLists.txt  README.md  build-release.sh  go.mod  go.sum
agent/: agent.go  connector.go
assuan/: README.md
assuan/client/: doc.go  session.go  session_test.go
assuan/common/: doc.go  error.go  error_test.go  errortable.go  escape.go  escape_test.go  io.go  io_test.go
assuan/server/: doc.go  inquire.go  server.go  server_test.go
cmake/: agent.rc.in  agent.xml.in  pinentry.rc.in  pinentry.xml.in  sign.sh  sorelay.rc.in  sorelay.xml.in  win-gpg-agent.json.in
cmd/agent/: main.go
cmd/pinentry/: main.go
cmd/sorelay/: main.go
config/: cfg.go
docs/: win-gpg-agent-relay  win-gpg-agent.epgz
pinentry/: client.go  server.go  settings.go
release/: CMakeCache.txt  Makefile  changelog.txt  cmake_install.cmake  install_manifest.txt
systray/: README.md  systray.go  systray_windows.go
tools/: tools.go
util/: credui.go  cygwin.go  log.go  mbox.go  names.go  persist.go  process.go  setenv.go  winver.go  xagent.go
wincred/: README.md  conversion.go  conversion_test.go  sys.go  sys_test.go  types.go  wincred_test.go
